# wacoq-bin

./: .gitignore  .gitmodules  Makefile  README.md  dune  dune-workspace  index.html  package-lock.json  package.json  tsconfig.json  wacoq.opam  webpack.config.js
docs/: build.md
etc/: build-node.sh  mkcoq-pkgs.sh  postinstall.js  setup.sh
etc/patches/: coerce-32bit.patch  extern.patch  temporary-fix-for-coq-bug-14211.patch  timeout.patch
src/: cli.ts  dune  icoq.ml  index.html  ocaml_exec.ts  sdk.ts  startup.ts  wacoq_proto.ml  worker.ts
src/backend/: byterun_stubs.c  core.ts  dune  icoq.ml  icoq_init.ml  inspect.ml  ocaml_exec.ts  packages.ts  wacoq_proto.ml
src/backend/subproc/: index.ts  packages.ts
src/ui/: console.css  console.ts  format-pprint.js
