(env
 (release (flags :standard -rectypes) (ocamlc_flags )
          (ocamlopt_flags :standard -O3 -unbox-closures))
 (dev     (flags :standard -rectypes)))

(dirs ("src" vendor))

(alias
 (name coq)
 (deps
  (package coq)))

(alias
 (name wacoq)
 (deps
  src/backend/icoq.bc
  src/backend/icoq.exe
  src/backend/dllbyterun_stubs.wasm))
