(env
 (release (flags :standard -rectypes) (ocamlc_flags )
          (ocamlopt_flags :standard -O3 -unbox-closures))
 (dev     (flags :standard -rectypes)))

(dirs ("src" vendor))

(alias
 (name coq)
 (deps
  (package coq)))

(alias
 (name wacoq)
 (deps
  src/backend/icoq.bc
  src/backend/icoq.exe
  src/backend/dllbyterun_stubs.wasm
  cli.js))

(rule
 (target coq-pkgs)
 (deps
  cli.js
  src/build/metadata/coq-pkgs.json
  (package coq))
 (action
  (run node ./cli.js --nostdlib src/build/metadata/coq-pkgs.json)))

(rule
 (targets cli.js)
 (deps
  (source_tree src)
  tsconfig.json
  package.json)
 (action
  (progn
   (run npx parcel build -d . --target node src/cli.ts))))
