synopsis:     "Coq for WebAssembly"
description:  "WASM Binaries of the Coq Proof Assistant (for jsCoq)"
name:         "wacoq"
opam-version: "2.0"
maintainer:   "corwin.amber@gmail.com"
authors:      "Shachar Itzhaky"
homepage:     "https://github.com/corwin-of-amber/wacoq-bin"
bug-reports:  "https://github.com/corwin-of-amber/wacoq-bin"
dev-repo:     "git+https://github.com/corwin-of-amber/wacoq-bin.git"
license:      "AGPL-3.0-or-later"

depends: [
  "ocaml"               { >= "4.08.1"           }
  "dune"                { >= "2.4.0" & < "3.2"  }
  "yojson"              { >= "1.7.0"            }
  "ppx_deriving_yojson" { >= "3.5.3"            }
  "ppx_import"          { >= "1.8.0"            }
  # We should just rely on OPAM's serlib but this is still early
  "sexplib"             { >= "v0.14.0"          }
  "ppx_sexp_conv"       { >= "v0.14.1" & < "v0.15" }
  # We build a local, patched Coq; these are its deps
  "ocamlfind"
  "num"
  "zarith"              { >= "1.11"    }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
