(executable
 (name icoq)
 (modes byte native)
 (preprocess (staged_pps ppx_import ppx_deriving_yojson))
 (libraries coq.stm coq.toplevel yojson coq-serapi.serlib coq-serapi.serapi_v8_12)
 (ocamlc_flags -no-check-prims)
 (link_flags -linkall))

(rule
 (target wacoq_version.ml)
 (deps ../../package.json)
 (action
  (bash "node -p \
      '`let version = \"${require(\"../../package.json\").version}\"`' \
      > %{target}")))

(rule
 (targets dllbyterun_stubs.wasm)
 (deps byterun_stubs.c)
 (action
  (bash "/opt/wasi-sdk/bin/clang -target wasm32-unknown-emscripten -D__wasi__ -fPIC \
	  byterun_stubs.c -o %{targets} -nostdlib -Wl,--shared -Wl,--export-all \
      -I%{ocaml-config:standard_library}")))
